# veritas-stream

./: .env.example  .gitignore  .gitmodules  DESIGN.md  DOMAIN_NOTES.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  schema.sql
api/: dependencies.py  main.py  requirements.txt
api/models/: requests.py  responses.py
api/routers/: agents.py  applications.py  documents.py  health.py  pipeline.py  registry.py  whatif.py
api/services/: document_service.py  extraction_service.py  pipeline_service.py  whatif_service.py
api/sse/: progress_broker.py
artifacts/: occ_collision_report.txt  regulatory_package_NARR05.json
data/: applicant_profiles.json  seed_events.jsonl
docs/reports/: inline-images.py  veritas-stream-interim-report.md
docs/reports/final/: veritas-stream-final-report.md
docs/trp/: TRP1 Challenge Week 5_ Agentic Event Store & Enterprise Audit Infrastructure.md
ledger/: event_store.py  upcasters.py
ledger/agents/: base_agent.py  credit_analysis_agent.py  papermind_adapter.py  stub_agents.py
ledger/commands/: handlers.py
ledger/domain/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
ledger/integrity/: audit_chain.py  gas_town.py
ledger/mcp/: resources.py  server.py  tools.py
ledger/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
ledger/registry/: client.py
ledger/schema/: events.py
ledger/upcasting/: registry.py  upcasters.py
load_gen/: run_concurrent.py
regulatory/: package.py
scripts/: demo_narr05.py  rebuild_projections.py  run_pipeline.py  start_mcp_server.py  test_gemini.py
scripts/demos/: demo_gas_town.py  demo_occ.py  demo_outbox.py  demo_projection_daemon.py  demo_temporal_compliance.py  demo_upcasting.py  demo_what_if.py  what_if_scenarios.json
tests/: conftest.py  test_aggregates.py  test_command_handlers.py  test_concurrency.py  test_event_store.py  test_gas_town.py  test_integrity.py  test_mcp_integration.py  test_mcp_lifecycle.py  test_mcp_pg.py  test_narratives.py  test_projections.py  test_schema.py  test_upcasting.py
tests/phase1/: test_event_store.py
what_if/: projector.py
