[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veritas-stream"
version = "0.1.0"
description = "The Ledger — Agentic Event Store & Enterprise Audit Infrastructure"
requires-python = ">=3.12,<3.13"

dependencies = [
    # PostgreSQL async driver
    "asyncpg>=0.29.0,<0.30",
    # Claude / Anthropic SDK
    "anthropic>=0.30.0,<0.40",
    # Data validation
    "pydantic>=2.6.0,<3.0",
    # Agent graph framework
    "langgraph>=0.1.0,<0.3",
    # Data generation
    "faker>=24.0.0,<26.0",
    "reportlab>=4.2.0,<5.0",
    "openpyxl>=3.1.0,<4.0",
    # MCP server (Phase 5)
    "fastmcp>=0.9.0",
    # Env / config
    "python-dotenv>=1.0.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["ledger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<0.25",
]
